--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,10 @@
       href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Cardo&display=swap"
+      rel="stylesheet"
+    />
     <title>Archivum</title>
   </head>
   <body>
